<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPerfilHost">

    <TextView
        android:id="@+id/opcao_perfil_host"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_host2"
        android:drawableStart="@drawable/back"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/carrossel_img"
        android:layout_width="390dp"
        android:layout_height="155dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_pesq_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcao_perfil_host"/>

    <TextView
        android:id="@+id/nome_host"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_host2"
        android:layout_marginTop="15dp"
        android:layout_marginRight="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carrossel_img"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cid_londres"
        android:layout_marginRight="230dp"
        android:drawableStart="@drawable/baseline_room_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_host"/>

    <TextView
        android:id="@+id/avaliacao"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="250dp"
        android:drawableStart="@drawable/baseline_star_half_24"
        android:text="@string/num_avaliacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/nome_host"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/localizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qtd_avaliacao"
        android:layout_marginStart="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avaliacao"/>

    <TextView
        android:id="@+id/sobre"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="240dp"
        android:text="@string/sobre_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localizacao"/>

    <TextView
        android:id="@+id/texto_sobre"
        android:layout_width="274dp"
        android:layout_height="130dp"
        android:layout_marginRight="80dp"
        android:text="@string/text_sobre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sobre" />

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginStart="220dp"
        android:text="@string/text_sobre_mais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/texto_sobre"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/TitleText"
        android:layout_width="373dp"
        android:layout_height="33dp"
        android:layout_marginTop="72dp"
        android:text="@string/regras_casa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_sobre" />


</androidx.constraintlayout.widget.ConstraintLayout>