<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tela_opcao_usuario">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        </LinearLayout>

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frase_opcoes"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escolha_seu_tipo_usuario"
            android:textColor="@color/rosinha"
            tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="200px">

            <Button
                android:id="@+id/buttun_inter"
                style="@style/Botoes"
                android:layout_width="650px"
                android:layout_height="wrap_content"
                android:text="@string/intercambista"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/btn1"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_host"
                style="@style/Botoes"
                android:layout_width="650px"
                android:layout_height="wrap_content"
                android:text="@string/host_family"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/btn1"/>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_pular"
                style="@style/BotaoRignt"
                android:layout_width="500px"
                android:layout_height="wrap_content"
                android:text="@string/pular"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/btn1"/>
        </RelativeLayout>

        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>