<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    tools:context=".TelaPrincipal">

    <TextView
        android:id="@+id/msg_bem_vindo"
        style="@style/TitleText"
        android:layout_width="212dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/bem_vindo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="61dp"
        android:layout_height="49dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/img_usua_inter"
        app:layout_constraintStart_toEndOf="@id/msg_bem_vindo"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/barra_pesquisa"
        android:background="@drawable/barra_pesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/onde_ir"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_bem_vindo"
        />

    <View
        android:id="@+id/conteiner_menu"
        android:layout_width="506dp"
        android:layout_height="554dp"
        android:layout_margin="20dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/view_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra_pesquisa" />

    <TextView
        android:id="@+id/frase_buscas"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="256dp"
        android:text="@string/buscas_populares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra_pesquisa" />

    <TextView
        android:id="@+id/frase_cidades"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="256dp"
        android:text="@string/cidades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_buscas" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/rosinha"
        app:cardCornerRadius="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-100dp"
        tools:layout_editor_absoluteY="383dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_cidades"/>

    <ImageView
        android:id="@+id/img_um"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="28dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pais_um"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_cidades" />

    <ImageView
        android:id="@+id/img_dois"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pais_dois"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_cidades" />

    <ImageView
        android:id="@+id/img_tres"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pais_tres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_cidades"/>

    <TextView
        android:id="@+id/frase_menu"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="280dp"
        android:text="@string/frase_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_tres"/>

    <TextView
        android:id="@+id/frase_paises"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="256dp"
        android:text="@string/paises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_menu"/>

    <ImageView
        android:id="@+id/paises_um"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/paises_um"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_paises"/>

    <ImageView
        android:id="@+id/paises_dois"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/paises_dois"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_paises" />

    <ImageView
        android:id="@+id/paises_tres"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/paises_tres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_paises" />

    <!--  Menu  -->

    <ImageView
        android:id="@+id/menu_casa"
        android:layout_width="78dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="712dp"
        android:src="@drawable/menu_casa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Abas_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_casa" />

    <ImageView
        android:id="@+id/arquivo_hist"
        android:layout_width="78dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="712dp"
        android:src="@drawable/menu_arquivo"
        app:layout_constraintStart_toEndOf="@id/menu_casa"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/Abas_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/historico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arquivo_hist" />

    <ImageView
        android:id="@+id/icon_chat"
        android:layout_width="78dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="712dp"
        android:src="@drawable/bate_papo"
        app:layout_constraintStart_toEndOf="@id/arquivo_hist"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Abas_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chat"
        app:layout_constraintTop_toBottomOf="@+id/icon_chat"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="237dp" />

    <ImageView
        android:id="@+id/icon_perfil"
        android:layout_width="78dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="712dp"
        android:src="@drawable/do_utilizador"
        app:layout_constraintStart_toEndOf="@id/icon_chat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Abas_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/perfil"
        app:layout_constraintTop_toBottomOf="@+id/icon_perfil"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="326dp" />


</androidx.constraintlayout.widget.ConstraintLayout>